--- a/plot_style.css
+++ b/plot_style.css
@@ -1,19 +1,95 @@
 #alex_plot {
-
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 #plot_header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
+#plot_header h3 {
+  margin-top: 0;
+}
+
+#bar_chart {
+  width: 50%;
+  fill: darkblue;
+  margin: 0;
+}
+
+#info {
+  width: 50%;
+}
+
+#info_county {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+#info_county p {
+  margin: 0;
+}
+
+#info_county h3 {
+  margin-bottom: 0;
 }
 
 #plot_map {
+  display: flex;
+  align-self: center;
+  justify-self: center;
+}
 
+svg {
+}
+
+.boundary {
+  fill: yellow;
+  stroke: black;
+  stroke-width: 10px;
+}
+
+#plot_types {
+  display: flex;
+  flex-direction: row;
+}
+
+.option {
+  padding: 2px 10px;
+  margin: 5px;
+  border: solid black 1px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.option_selected {
+  border-width: 2px;
+}
+
+.county {
+  fill: green;
+}
+
+div.tooltip {
+  color: #222;
+  background: #fff;
+  border-radius: 3px;
+  box-shadow: 0px 0px 2px 0px #a6a6a6;
+  padding: 0.2em;
+  text-shadow: #f5f5f5 0 1px 0;
+  opacity: 0.9;
+  position: absolute;
+}
+
+.hidden {
+  visibility: hidden;
 }
 
 #plot_timeline {
-    
 }
 
 #plot_controls {
-
 }
