--- a/plot_style.css
+++ b/plot_style.css
@@ -14,6 +14,15 @@
   margin-top: 0;
 }
 
+#plot_title {
+  display: flex;
+  justify-content: center;
+}
+
+#global_moran_pvalue {
+  margin: 0;
+}
+
 #bar_chart {
   width: 50%;
   fill: darkblue;
@@ -43,13 +52,10 @@
   justify-self: center;
 }
 
-svg {
-}
-
 .boundary {
-  fill: yellow;
+  fill: white;
   stroke: black;
-  stroke-width: 10px;
+  stroke-width: 1px;
 }
 
 #plot_types {
@@ -67,10 +73,6 @@ svg {
 
 .option_selected {
   border-width: 2px;
-}
-
-.county {
-  fill: green;
 }
 
 div.tooltip {
